# ratapy

./: AGENTS.md  ARDUINO PROJECT.txt  README.md  check_tasks_on_hardware.py  example.py  example_gamepad_pi.py  example_local.py  install.sh  pyproject.toml  ratapyui  test.py
docs/: INSTALL.md
firmware/: acli.sh  flash.sh  sizes.py
firmware/rata/: BoardConfig.h  Config.h  Devices.h  FrameParser.h  Protocol.h  Transport.h  rata.ino
ratapy/: __init__.py  boards.py  cli.py  doctor.py  executor.py  link.py  protocol.py  raspberry.py  scheduler.py  tasks.py
ratapy/devices/: __init__.py  complex_devices.py  simple_devices.py
ratapy/devices/hid/: __init__.py  gadget.py  gamepad.py  mapping.py  report.py  storage.py
ratapy/devices/local/: __init__.py  base.py  camera.py  neopixel.py
ratapyUI/: README.md  __init__.py  __main__.py  app.py  pages.py  theme.py
ratapyUI/ops/: __init__.py  common.py  devices.py  flash.py  i2c.py  newproject.py  rootscript.py  runner.py  runtests.py  storage.py  updates.py  usbgadget.py
ratapyUI/tui/: __init__.py  screen.py  widgets.py
scripts/: setup-i2c.sh  setup-usb-gadget.sh
tests/: conftest.py  test_boards.py  test_button.py  test_devices.py  test_executor.py  test_hid.py  test_protocol.py  test_sleep.py  test_switches.py  test_tasks.py
